deploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "name": {
            "type": "string",
            "maxLength": 15,
            "metadata": {
                "Description": "Select the name of the Microsoft Dynamics NAV 2016 deployment"
            }
        },
        "location": {
            "type": "string",
            "defaultValue": "West Europe",
            "allowedValues": ["West US", "East US", "North Central US", "North Europe", "West Europe", "East Asia", "Southeast Asia"],
            "metadata": {
                "Description": "Select Location in which to deploy Microsoft Dynamics NAV 2016"
            }
        },
        "vmAdminUsername": {
            "type": "string",
            "defaultValue": "vmadmin",
            "metadata": {
                "Description": "Specify VM Admin user name"
            }
        },
        "vmAdminPassword": {
            "type": "securestring",
            "metadata": {
                "Description": "Specify VM Admin Password"
            }
        }
    },
    "variables": {
        "storageAccountType" : "Standard_LRS",
        "vmStorageAccountContainerName" : "vhds",
        "publicIPAddressName" : "[concat(parameters('Name'), '_pip')]",
        "newStorageAccountName" : "[concat('storage', uniqueString(resourceGroup().id))]",
        "dnsName" : "[tolower(parameters('name'))]",
        "vmSize" : "Standard_D2",
        "addressPrefix":"10.0.0.0/16",
        "subnetName" : "Subnet",
        "subnetPrefix" : "10.0.0.0/24",
        "networkSecurityGroupName": "[concat(parameters('vmName'), '_nsg')]",
        "virtualNetworkName" : "VNet",
        "server1Name" : "[parameters('Name')]",
        "nic1Name" : "[concat(parameters('Name'),'_nic')]",
        "vnetID": "[resourceId('Microsoft.Network/virtualNetworks',variables('virtualNetworkName'))]",
        "subnetRef": "[concat(variables('vnetID'),'/subnets/',variables('subnetName'))]",
        "accountid": "[concat('/subscriptions/',subscription().subscriptionId,'/resourceGroups/',resourceGroup().name,'/providers/','Microsoft.Storage/storageAccounts/', variables('newStorageAccountName'))]"
    },
    "resources": [
        {
            "apiVersion": "2015-05-01-preview",
            "type": "Microsoft.Storage/storageAccounts",
            "name": "[variables('newStorageAccountName')]",
            "location": "[parameters('location')]",
            "properties": {
                "accountType": "[variables('storageAccountType')]"
            }
        },
        {
            "apiVersion": "2015-05-01-preview",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('publicIPAddressName')]",
            "location": "[parameters('location')]",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "dnsSettings": {
                    "domainNameLabel": "[variables('dnsName')]"
                }
            }
        },
        {
          "apiVersion": "2015-05-01-preview",
          "type": "Microsoft.Network/networkSecurityGroups",
          "name": "[variables('networkSecurityGroupName')]",
          "location": "[parameters('location')]",
          "properties": {
            "securityRules": [
              {
                "name": "HTTP",
                "properties": {
                  "description": "Http access",
                  "protocol": "Tcp",
                  "sourcePortRange": "80",
                  "destinationPortRange": "80",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "*",
                  "access": "Allow",
                  "priority": 100,
                  "direction": "Inbound"
                }
              },
              {
                "name": "HTTPS",
                "properties": {
                  "description": "Http access over Secure Socket Layer",
                  "protocol": "Tcp",
                  "sourcePortRange": "443",
                  "destinationPortRange": "443",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "*",
                  "access": "Allow",
                  "priority": 200,
                  "direction": "Inbound"
                }
              },
              {
                "name": "Client",
                "properties": {
                  "description": "Access for Windows Client",
                  "protocol": "Tcp",
                  "sourcePortRange": "7046",
                  "destinationPortRange": "7046",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "*",
                  "access": "Allow",
                  "priority": 300,
                  "direction": "Inbound"
                }
              },
              {
                "name": "Soap",
                "properties": {
                  "description": "Access to Soap Web Services",
                  "protocol": "Tcp",
                  "sourcePortRange": "7047",
                  "destinationPortRange": "7047",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "*",
                  "access": "Allow",
                  "priority": 400,
                  "direction": "Inbound"
                }
              },
              {
                "name": "OData",
                "properties": {
                  "description": "Access to OData Services",
                  "protocol": "Tcp",
                  "sourcePortRange": "7048",
                  "destinationPortRange": "7048",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "*",
                  "access": "Allow",
                  "priority": 500,
                  "direction": "Inbound"
                }
              },
              {
                "name": "Help",
                "properties": {
                  "description": "Access to Help Server",
                  "protocol": "Tcp",
                  "sourcePortRange": "49000",
                  "destinationPortRange": "49000",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "*",
                  "access": "Allow",
                  "priority": 600,
                  "direction": "Inbound"
                }
              }
            ]
          }
        },
        {
            "apiVersion": "2015-05-01-preview",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('virtualNetworkName')]",
            "location": "[parameters('location')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('addressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('subnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('subnetPrefix')]"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2015-05-01-preview",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[variables('nic1Name')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]",
                "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))]"
                            },
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[variables('server1Name')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[concat('Microsoft.Storage/storageAccounts/', variables('newStorageAccountName'))]",
                "[concat('Microsoft.Network/networkInterfaces/', variables('nic1Name'))]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[variables('vmSize')]"
                },
                "osProfile": {
                    "computername": "[variables('server1Name')]",
                    "adminUsername": "[parameters('vmAdminUsername')]",
                    "adminPassword": "[parameters('vmAdminPassword')]",
                    "windowsConfiguration": {
                      "provisionVmAgent": "true"
                    }
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftDynamicsNAV",
                        "offer": "DynamicsNAV",
                        "sku": "2016",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "osdisk",
                        "vhd": { 
                            "uri": "[concat('http://',variables('newStorageAccountName'),'.blob.core.windows.net/',variables('vmStorageAccountContainerName'),'/',variables('server1Name'),'.vhd')]" 
                        }, 
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('nic1Name'))]"
                        }
                    ]
                }
            }
        }
    ]
}
